--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -25,7 +25,7 @@
 <script>
 async function analyze() {
     const url = document.getElementById("urlInput").value;
-    const response = await fetch(`http://127.0.0.1:8000/analyze?url=${url}`);
+    const response = await fetch(`/analyze?url=${encodeURIComponent(url)}`);
     const data = await response.json();
     document.getElementById("result").textContent =
         JSON.stringify(data, null, 2);
